--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,6 +1,6 @@
 .navBar {
     display: flex;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
     justify-content: flex-end;
     border-radius: 5px;
     justify-content: space-around;
@@ -9,20 +9,20 @@
 
 .boton {
     height: 25px;
-    width: 70px;
+    width: auto;
     margin-left: 10px;
-    background-color: #89C4E1;
-    color: #1A0000;
+    background-color: #003f5c;
+    color: #ffffff;
     border-radius: 5px;
-    border: 1px solid rgb(165, 165, 165);
+    border: 1px solid rgb(0, 0, 0);
 }
 
 .botonLogOut {
     height: 25px;
-    width: 70px;
+    width: auto;
     margin-left: 10px;
     background-color: #be0202;
     color: #ffffff;
     border-radius: 5px;
-    border: 1px solid rgb(165, 165, 165);
-}
+    border: 1px solid rgb(0, 0, 0);
+};
