--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
+   background-attachment: fixed;
    background-image: url('./bg.png');
    min-height: 100vh;
    min-width: auto;
