--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,53 +1,101 @@
 .card {
     position: relative;
-    border: 8px solid rgb(182, 182, 182);
-    width: 25%;
+    width: 230px;
+    height: 330px;
     border-radius: 10px;
-    border-style: inset;
     background-color: white;
+    border: 4px outset #d4d4d4;
+    margin: 10px;
 }
 
 .imagen {
-    position: relative;
+    margin-top: 34px;
     width: 100%;
+    height: 230px;
+}
+
+.buttonFavoriteOff {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    background-color: rgba(240, 248, 255, 0);
+    font-size: 22px;
+    border: 0px;
+}
+
+.buttonFavoriteOn {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    background-color: rgba(240, 248, 255, 0);
+    font-size: 22px;
+    border: 0px;
 }
 
 .botonCerrar {
-    background-color: rgb(255, 0, 0);
+    position: absolute;
+    left: 86%;
+    top: 2%;
+    height: 22px;
+    width: 22px;
+
+    color: #ffffff;
+    background-color: rgb(224, 0, 0);
     border-radius: 4px;
     border: 1px solid rgb(77, 76, 76);
-    position: absolute;
-    margin: 4px;
-    color: #F5EDCE;
-    top: 0;
-    right: 0;
+    font-size: 12px;
 }
 
 .nombre {
     position: absolute;
-    bottom: 40px;
-    left: 10px;
-    font-size: 20px;
+    left: 50%;
+    top: 68%;
+    transform: translate(-50%, -50%);
+
+    padding: 1%;
+    padding-left: 3%;
+    padding-right: 3%;
+
+    
+    width:max-content;
+    max-width: 200px;
+    max-height: 3.6em; /* establece un alto máximo de 3.6em (dos líneas de texto) */
+    overflow: hidden; /* oculta el contenido que sobrepase el tamaño del elemento */
+    text-overflow: ellipsis; /* agrega "..." al final del contenido que se haya ocultado */
+
+    
     border-radius: 4px;
-    color: #F5EDCE;
-    background-color: rgba(0, 0, 0, 0.841);
-    padding: 2%;
-    height: 8%;
-    display: flex;
-    align-items: center;
+    font-size: 16px;
+    font-family:Arial, Helvetica, sans-serif;
+    color:aliceblue;
+    background-color: rgba(0, 0, 0, 0.95);
 }
 
 .especieGenero {
+    position: absolute;
+    left: 0%;
+    top: 80%;
+    /* transform: translate(-50%, -50%); */
+
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
     display: flex;
     justify-content: space-around;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: normal;
-    font-size: 9px;
-    margin-left: 2%;
-    margin-right: 2%;
     align-items: center;
-    margin-top: -2%;
+
+    width: 100%;
+    height: 66px;
+    /* grid-template-rows: 66px; /* establece el alto de las filas en 66px */
+
+
+    font-family:Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-size: 11px;
 }
 
+
+.especieGenero h2:nth-of-type(2) {
+    margin-top: -8px; /* ajusta el valor según tus necesidades */
+}
 
 
