--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,8 @@
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
-   background-image: url('./bg.png');
+   background-image: url("./bg.png");
    min-height: 100vh;
    min-width: auto;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
