--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -1,101 +1,128 @@
 .card {
-    position: relative;
-    width: 230px;
-    height: 330px;
-    border-radius: 10px;
-    background-color: white;
-    border: 4px outset #d4d4d4;
-    margin: 10px;
+   position: relative;
+   width: 230px;
+   height: 330px;
+   border-radius: 10px;
+   background-color: white;
+   border: 4px outset #d4d4d4;
+   margin: auto;
+   margin-bottom: 40px;
 }
 
-.imagen {
-    margin-top: 34px;
-    width: 100%;
-    height: 230px;
+.card:hover {
+   transform: scale(1.1);
+   transition: transform 0.3s;
+   -webkit-transform: scale(1.1);
+   -moz-transform: scale(1.1);
+   -ms-transform: scale(1.1);
+   -o-transform: scale(1.1);
 }
 
 .buttonFavoriteOff {
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    background-color: rgba(240, 248, 255, 0);
-    font-size: 22px;
-    border: 0px;
+   position: absolute;
+   left: 0%;
+   top: 0%;
+   background-color: rgba(240, 248, 255, 0);
+   font-size: 22px;
+   border: 0px;
 }
 
 .buttonFavoriteOn {
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    background-color: rgba(240, 248, 255, 0);
-    font-size: 22px;
-    border: 0px;
+   position: absolute;
+   left: 0%;
+   top: 0%;
+   background-color: rgba(240, 248, 255, 0);
+   font-size: 22px;
+   border: 0px;
+}
+
+.buttonFavoriteOn:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+   cursor: pointer;
+}
+
+.buttonFavoriteOff:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+   cursor: pointer;
 }
 
 .botonCerrar {
-    position: absolute;
-    left: 86%;
-    top: 2%;
-    height: 22px;
-    width: 22px;
+   position: absolute;
+   left: 86%;
+   top: 2%;
+   height: 22px;
+   width: 22px;
+   color: #ffffff;
+   background-color: rgb(224, 0, 0);
+   border-radius: 4px;
+   border: 1px solid rgb(77, 76, 76);
+   font-size: 12px;
+   cursor: pointer;
+}
 
-    color: #ffffff;
-    background-color: rgb(224, 0, 0);
-    border-radius: 4px;
-    border: 1px solid rgb(77, 76, 76);
-    font-size: 12px;
+.botonCerrar:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+}
+
+.imagen {
+   margin-top: 34px;
+   width: 100%;
+   height: 230px;
+   z-index: -2;
+}
+
+.contenedorNombre {
+   position: absolute;
+   width: 100%;
+   top: 192px;
+   height: 73px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .nombre {
-    position: absolute;
-    left: 50%;
-    top: 68%;
-    transform: translate(-50%, -50%);
+   max-width: 80%;
+   margin: auto;
+   text-decoration: none;
+   overflow: hidden;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   background-color: rgba(0, 0, 0, 0.92);
+   border-radius: 15px;
+   padding: 10px;
+   color: aliceblue;
+   font-family: "Courier New", Courier, monospace;
+   font-weight: 100;
+   font-size: 18px;
+   -webkit-border-radius: 15px;
+   -moz-border-radius: 15px;
+   -ms-border-radius: 15px;
+   -o-border-radius: 15px;
+}
 
-    padding: 1%;
-    padding-left: 3%;
-    padding-right: 3%;
-
-    
-    width:max-content;
-    max-width: 200px;
-    max-height: 3.6em; /* establece un alto máximo de 3.6em (dos líneas de texto) */
-    overflow: hidden; /* oculta el contenido que sobrepase el tamaño del elemento */
-    text-overflow: ellipsis; /* agrega "..." al final del contenido que se haya ocultado */
-
-    
-    border-radius: 4px;
-    font-size: 16px;
-    font-family:Arial, Helvetica, sans-serif;
-    color:aliceblue;
-    background-color: rgba(0, 0, 0, 0.95);
+.nombre:hover {
+   transform: scale(1.1);
+   transition: transform 0.3s;
 }
 
 .especieGenero {
-    position: absolute;
-    left: 0%;
-    top: 80%;
-    /* transform: translate(-50%, -50%); */
+   position: absolute;
+   left: 0%;
+   top: 80%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
 
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    width: 100%;
-    height: 66px;
-    /* grid-template-rows: 66px; /* establece el alto de las filas en 66px */
-
-
-    font-family:Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-size: 11px;
+   width: 100%;
+   height: 66px;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-size: 11px;
 }
-
 
 .especieGenero h2:nth-of-type(2) {
-    margin-top: -8px; /* ajusta el valor según tus necesidades */
+   margin-top: -8px; /* ajusta el valor según tus necesidades */
 }
-
-
