--- a/client/src/components/Favorites.css
+++ b/client/src/components/Favorites.css
@@ -1,5 +1,92 @@
+.container {
+   max-width: 1200px;
+   margin: auto;
+}
+
 .favoriteCards {
-    display: grid;
-    margin-top: 20px;
-    grid-template-columns: repeat(4, 1fr);
+   display: grid;
+   margin-top: 40px;
+   grid-template-columns: repeat(4, 1fr);
+}
+
+.orderFilter {
+   width: 230px;
+   margin: auto;
+   margin-top: 10px;
+   border-radius: 20px;
+   display: flex;
+   flex-direction: column;
+   background-color: aliceblue;
+   font-size: 30px;
+   padding-bottom: 20px;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   -ms-border-radius: 20px;
+   -o-border-radius: 20px;
+}
+
+.select {
+   margin: auto;
+   margin-top: -35px;
+   width: 90%;
+   height: 35px;
+   border-radius: 10px;
+   font-size: 20px;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-weight: 500;
+}
+
+.resetButton {
+   margin-top: 25px;
+   width: 170px;
+   height: 35px;
+   border: 1px solid black;
+   border-radius: 10px;
+   background-color: #ffffff;
+   color: rgb(0, 0, 0);
+   font-size: 20px;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-weight: 500;
+}
+
+.resetButton:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+   -webkit-transition: transform 0.3s;
+   -moz-transition: transform 0.3s;
+   -ms-transition: transform 0.3s;
+   -o-transition: transform 0.3s;
+}
+
+.emptyFavorites {
+   margin: auto;
+   margin-top: 40px;
+   max-width: 400px;
+   padding: 10px;
+   border-radius: 10px;
+   background-color: rgb(255, 255, 255);
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-size: 20px;
+}
+
+@media screen and (max-width: 1050px) {
+   .favoriteCards {
+      grid-template-columns: repeat(3, 1fr);
+   }
+}
+
+@media screen and (max-width: 850px) {
+   .favoriteCards {
+      margin-top: -40px;
+      grid-template-columns: repeat(2, 1fr);
+   }
+}
+
+@media screen and (max-width: 550px) {
+   .favoriteCards {
+      grid-template-columns: repeat(1, 1fr);
+   }
+   .orderFilter {
+      margin-bottom: 40px;
+   }
 }
