--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -1,28 +1,101 @@
+.container {
+   max-width: 1200px;
+   margin: auto;
+}
+
 .navBar {
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    justify-content: flex-end;
-    border-radius: 5px;
-    justify-content: space-around;
-    align-items: center;
+   left: 50%;
+   transform: translateX(-50%);
+   position: fixed;
+   width: 1200px;
+   height: 70px;
+   margin: auto;
+   display: flex;
+   background-color: rgb(255, 255, 255);
+   justify-content: flex-end;
+   border-radius: 5px;
+   justify-content: space-around;
+   align-items: center;
+   z-index: 100;
 }
 
 .boton {
-    height: 25px;
-    width: auto;
-    margin-left: 10px;
-    background-color: #003f5c;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 1px solid rgb(0, 0, 0);
+   width: 170px;
+   height: 35px;
+   border: 1px solid black;
+   border-radius: 10px;
+   background-color: #003f5c;
+   color: white;
+   font-size: 20px;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-weight: 500;
+}
+
+.boton:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+}
+
+.barraBusqueda {
+   width: 170px;
+   height: 35px;
+   font-size: 18px;
+   border-radius: 10px;
+   border: 1px solid black;
 }
 
 .botonLogOut {
-    height: 25px;
-    width: auto;
-    margin-left: 10px;
-    background-color: #be0202;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 1px solid rgb(0, 0, 0);
-};
+   width: 170px;
+   height: 35px;
+   border: 1px solid black;
+   border-radius: 10px;
+   background-color: #be0202;
+   color: white;
+   font-size: 20px;
+   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+   font-weight: 500;
+}
+
+.botonLogOut:hover {
+   transform: scale(1.2);
+   transition: transform 0.3s;
+}
+
+@media screen and (max-width: 1300px) {
+   .navBar {
+      width: 90%;
+      padding-left: 10px;
+      padding-right: 10px;
+   }
+}
+
+@media screen and (max-width: 1180px) {
+   .boton {
+      width: 120px;
+      font-size: 18px;
+   }
+   .botonLogOut {
+      width: 140px;
+      font-size: 18px;
+   }
+   .barraBusqueda {
+      width: 120px;
+      font-size: 18px;
+   }
+}
+
+@media screen and (max-width: 850px) {
+   .navBar {
+      position: relative;
+      left: 0%;
+      transform: translateX(-0%);
+      width: 230px;
+      height: 330px;
+      flex-direction: column;
+      justify-content: space-around;
+   }
+   .botonLogOut {
+      width: 120px;
+      font-size: 17px;
+   }
+}
