--- a/client/src/components/Detail.css
+++ b/client/src/components/Detail.css
@@ -22,6 +22,7 @@
    font-size: 20px;
    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
    font-weight: 500;
+   cursor: pointer;
 }
 
 .button:hover {
