--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -32,8 +32,9 @@
 }
 
 .boton:hover {
-   transform: scale(1.2);
+   transform: scale(1.1);
    transition: transform 0.3s;
+   cursor: pointer;
 }
 
 .barraBusqueda {
@@ -54,10 +55,11 @@
    font-size: 20px;
    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
    font-weight: 500;
+   cursor: pointer;
 }
 
 .botonLogOut:hover {
-   transform: scale(1.2);
+   transform: scale(1.1);
    transition: transform 0.3s;
 }
 
